feat: observe Payload health in control plane
